; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mciseq/extr_mcimidi.c_MIDI_mciReadWord.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mciseq/extr_mcimidi.c_MIDI_mciReadWord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCIERR_INVALID_FILE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64*)* @MIDI_mciReadWord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @MIDI_mciReadWord(i32* %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64* %1, i64** %4, align 8
  %8 = load i64, i64* @MCIERR_INVALID_FILE, align 8
  store i64 %8, i64* %7, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @MIDI_mciReadByte(i32* %9, i64* %5)
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @MIDI_mciReadByte(i32* %13, i64* %6)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %12
  %17 = load i64, i64* %5, align 8
  %18 = trunc i64 %17 to i32
  %19 = shl i32 %18, 8
  %20 = sext i32 %19 to i64
  %21 = load i64, i64* %6, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i64*, i64** %4, align 8
  store i64 %22, i64* %23, align 8
  store i64 0, i64* %7, align 8
  br label %24

24:                                               ; preds = %16, %12, %2
  %25 = load i64, i64* %7, align 8
  ret i64 %25
}

declare dso_local i64 @MIDI_mciReadByte(i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
